--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
   "name": "animations",
   "devDependencies": {
-    "apache-server-configs": "^2.7.1",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.0",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.8.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha": "^0.4.10",
-    "grunt-newer": "^0.7.0",
-    "grunt-rev": "^0.1.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.3.0",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.4.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.4.0"
+    "http-server": "^0.9.0",
+    "node-sass": "^3.8.0"
   },
   "engines": {
-    "node": ">=0.10.0"
-  }
+    "node": ">6.1.0"
+  },
+  "description": "animations repo",
+  "version": "0.1.0",
+  "main": "index.js",
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "sass --watch app/styles/main.scss:app/css/main.css",
+    "build": "sass app/styles/main.scss app/css/main.css",
+    "livereload": "live-reload --port 9000 app/",
+    "server": "http-server app/ -o -p 9000",
+    "start": "npm run server -s & npm run livereload -s & npm run watch -s"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KarlDoyle/animations.git"
+  },
+  "keywords": [
+    "animations",
+    "css",
+    "css3"
+  ],
+  "author": "Karl Doyle",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KarlDoyle/animations/issues"
+  },
+  "homepage": "https://github.com/KarlDoyle/animations#readme"
 }
